Bug 374515 - Not possible to reset label text positions from association widget context menu
Summary: Not possible to reset label text positions from association widget context menu
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.21.0 (KDE Applications 16.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-03 23:41 UTC by Ralf Habacker
Modified: 2017-01-04 11:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.1 (KDE Applications 16.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-01-03 23:41:13 UTC
In the context menu of association widgets text tabels there is an entry to reset text positions, but this is not possible from the association widget context menu which is useful in cases where it is not possible to identify the related label.

How to reproduce: 
1. Start umbrello
2. add two classes
3. add an association between both classes
4. right click in the association
What happens:
There is no entry to reset text label positions

What is expected:
There should be an entry to reset text positions
Comment 1 Ralf Habacker 2017-01-03 23:57:32 UTC
Note: This happens with attribute associations e.g. aggregate and compositions.
Comment 2 Ralf Habacker 2017-01-04 00:01:03 UTC
Git commit d218d690c6cdba1c3b6a8c9af03ade79237c56ba by Ralf Habacker.
Committed on 04/01/2017 at 00:00.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Not possible to reset label text positions from association widget context menu'.

The fix adds additional menu entries having for full
associations to attribute association context menus too.
FIXED-IN:2.21.1 (KDE Applications 16.12.1)

M  +1    -0    umbrello/listpopupmenu.cpp

https://commits.kde.org/umbrello/d218d690c6cdba1c3b6a8c9af03ade79237c56ba
Comment 3 Ralf Habacker 2017-01-04 11:50:48 UTC
(In reply to Ralf Habacker from comment #1)
> Note: This happens with attribute associations e.g. aggregate and compositions.

and also for generalisations.