Fix 'Not possible to reset label text positions from association widget context menu'.

The fix adds additional menu entries having for full
associations to attribute association context menus too.

BUG:374515
FIXED-IN:2.21.1 (KDE Applications 16.12.1)